--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             <div class="row">
                 <label for="" class="form-label"><h5>Your experience<span class="main">*</span></h5></label>    
                 <div class="col-2">
-                    <input type="radio" id="star5" name="rate" value="5" />
+                    <input type="radio" id="star5" name="rate1" value="5" />
                     <label for="star5" title="text">5 stars</label>
-                    <input type="radio" id="star4" name="rate" value="4" />
+                    <input type="radio" id="star4" name="rate2" value="4" />
                     <label for="star4" title="text">4 stars</label>
-                    <input type="radio" id="star3" name="rate" value="3" />
+                    <input type="radio" id="star3" name="rate3" value="3" />
                     <label for="star3" title="text">3 stars</label>
-                    <input type="radio" id="star2" name="rate" value="2" />
+                    <input type="radio" id="star2" name="rate4" value="2" />
                     <label for="star2" title="text">2 stars</label>
-                    <input type="radio" id="star1" name="rate" value="1" />
+                    <input type="radio" id="star1" name="rate5" value="1" />
                     <label for="star1" title="text">1 star</label>
                   </div>
             </div><br>
@@ -58,27 +58,27 @@
                 </thead>
                 <tr>
                     <th>Purchase</th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5"></th>
+                    <th><input class="form-check-input" type="radio" name="Very Unsatisfied 1" id="inlineRadio1" value="option1"></th>
+                    <th><input class="form-check-input" type="radio" name="Unsatisfied1" id="inlineRadio1" value="option2"></th>
+                    <th><input class="form-check-input" type="radio" name="Normal1" id="inlineRadio1" value="option3"></th>
+                    <th><input class="form-check-input" type="radio" name="Satisfied1" id="inlineRadio1" value="option4"></th>
+                    <th><input class="form-check-input" type="radio" name="Very satisfied1" id="inlineRadio1" value="option5"></th>
                 </tr>
                 <tr>
                     <th>Service</th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option7"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option8"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option9"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option4"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option5"></th>
+                    <th><input class="form-check-input" type="radio" name="Very Unsatisfied 2" id="inlineRadio2" value="option7"></th>
+                    <th><input class="form-check-input" type="radio" name="Unsatisfied2" id="inlineRadio2" value="option8"></th>
+                    <th><input class="form-check-input" type="radio" name="Normal2" id="inlineRadio2" value="option9"></th>
+                    <th><input class="form-check-input" type="radio" name="Satisfied2" id="inlineRadio2" value="option4"></th>
+                    <th><input class="form-check-input" type="radio" name="Very satisfied2" id="inlineRadio2" value="option5"></th>
                 </tr>
                 <tr>
                     <th>Company Overall</th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5"></th>
+                    <th><input class="form-check-input" type="radio" name="Very Unsatisfied 3" id="inlineRadio1" value="option1"></th>
+                    <th><input class="form-check-input" type="radio" name="Unsatisfied3" id="inlineRadio1" value="option2"></th>
+                    <th><input class="form-check-input" type="radio" name="Normal3" id="inlineRadio1" value="option3"></th>
+                    <th><input class="form-check-input" type="radio" name="Satisfied3" id="inlineRadio1" value="option4"></th>
+                    <th><input class="form-check-input" type="radio" name="Very satisfied3" id="inlineRadio1" value="option5"></th>
                 </tr>
 
               </table>
@@ -98,27 +98,27 @@
                 </thead>
                 <tr>
                     <th>Buy from us again</th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5"></th>
+                    <th><input class="form-check-input" type="radio" name="Very Unlikely1" id="inlineRadio1" value="option1"></th>
+                    <th><input class="form-check-input" type="radio" name="Unlikely1" id="inlineRadio1" value="option2"></th>
+                    <th><input class="form-check-input" type="radio" name="Normal01" id="inlineRadio1" value="option3"></th>
+                    <th><input class="form-check-input" type="radio" name="likely1" id="inlineRadio1" value="option4"></th>
+                    <th><input class="form-check-input" type="radio" name="Very likely1" id="inlineRadio1" value="option5"></th>
                 </tr>
                 <tr>
                     <th>Recommend our product to others</th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5"></th>
+                    <th><input class="form-check-input" type="radio" name="Very Unlikely2" id="inlineRadio1" value="option1"></th>
+                    <th><input class="form-check-input" type="radio" name="Unlikely2" id="inlineRadio1" value="option2"></th>
+                    <th><input class="form-check-input" type="radio" name="Normal02" id="inlineRadio1" value="option3"></th>
+                    <th><input class="form-check-input" type="radio" name="likely2" id="inlineRadio1" value="option4"></th>
+                    <th><input class="form-check-input" type="radio" name="Very likely2" id="inlineRadio1" value="option5"></th>
                 </tr>
                 <tr>
                     <th>Recommand our company to others</th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option2"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option3"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option4"></th>
-                    <th><input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option5"></th>
+                    <th><input class="form-check-input" type="radio" name="Very Unlikely3" id="inlineRadio1" value="option1"></th>
+                    <th><input class="form-check-input" type="radio" name="Unlikely3" id="inlineRadio1" value="option2"></th>
+                    <th><input class="form-check-input" type="radio" name="Normal03" id="inlineRadio1" value="option3"></th>
+                    <th><input class="form-check-input" type="radio" name="likely3" id="inlineRadio1" value="option4"></th>
+                    <th><input class="form-check-input" type="radio" name="Very likely3" id="inlineRadio1" value="option5"></th>
                 </tr>
               </table>
             </div>
